--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@ div#header {
 		padding-top: 0px;
 	}
 }
+@-webkit-keyframes rollUpFirstBanner {
+	0% {
+		opacity: 1;
+		height: 100px; 
+		padding-top: 15px;
+	}
+	99.99% {
+	    opacity: 0;
+		height: 100px; 
+		padding-top: 15px;
+	}
+	100% {
+	    opacity: 0;
+		height: 0px; 
+		padding-top: 0px;
+	}
+}
 div#firstbanner {
 	height: 100px; 
 	padding-top: 15px;
@@ -42,9 +59,18 @@ div#firstbanner {
 	color: #444;
 	letter-spacing: 1px;
 	overflow: hidden;
-	animation: 2s ease-in-out 1.5s 1 rollUpFirstBanner forwards;
+	animation: 1.5s ease-in-out 2s 1 rollUpFirstBanner forwards;
+	-webkit-animation: 1.5s ease-in-out 2s 1 rollUpFirstBanner forwards;
 }
 @keyframes rollUpBannerContainer {
+	0% {
+		height: 115px;
+	}
+	100% {
+		height: 65px;
+	}
+}
+@-webkit-keyframes rollUpBannerContainer {
 	0% {
 		height: 115px;
 	}
@@ -56,6 +82,7 @@ div#bannercontainer{
 	height: 115px;
 	overflow: hidden;
 	animation: 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
+	-webkit-animation: 1.5s ease-in-out 3.5s 1 rollUpBannerContainer forwards;
 }
 div#bigfirstbannertext {
 	font-size: 1.45em;
@@ -64,6 +91,14 @@ div#smallfirstbannertext {
 	font-size: 1.1em;
 }
 @keyframes displaySecondBanner {
+	0% {
+		opacity: 0;
+	}
+	100% {
+	    opacity: 1;
+	}
+}
+@-webkit-keyframes displaySecondBanner {
 	0% {
 		opacity: 0;
 	}
@@ -80,6 +115,7 @@ div#secondbanner {
 	letter-spacing: 1px;
 	overflow: hidden;
 	animation: 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
+	-webkit-animation: 1s ease-in-out 3.6s 1 displaySecondBanner forwards;
 }
 div#secondbannertext {
 	font-size: 2em;
@@ -158,14 +194,14 @@ p {
 					</div>
 				</div>
 				<ul id="site_tabs">
-					<li id="current_tab"><a href="www.khoch.io/">&nbsp&nbsp / &nbsp&nbsp</a></li>
-					<li><a href="/about">About</a></li>
-					<li><a href="/essays">Essays</a></li>
-					<li><a href="/reviews">Reviews</a></li>
-					<li><a href="/blog?">Blog?</a></li>
-					<li><a href="/projects">Projects</a></li>
-					<li><a href="/photography">Photography</a></li>
-					<li><a href="/resume.pdf">R&eacute;sum&eacute;</a></li>
+					<li id="current_tab"><a href="http://www.khoch.io/">&nbsp&nbsp / &nbsp&nbsp</a></li>
+					<li><a href="http://www.khoch.io/about">About</a></li>
+					<li><a href="http://www.khoch.io/essays">Essays</a></li>
+					<li><a href="http://www.khoch.io/reviews">Reviews</a></li>
+					<li><a href="http://www.khoch.io/blog?">Blog?</a></li>
+					<li><a href="http://www.khoch.io/projects">Projects</a></li>
+					<li><a href="http://www.khoch.io/photography">Photography</a></li>
+					<li><a href="http://www.khoch.io/resume.pdf">R&eacute;sum&eacute;</a></li>
 				</ul>
 			</div>
 			<div id="content">
