--- a/animation_check.html
+++ b/animation_check.html
@@ -15,7 +15,7 @@
 					var anim_test_banner = document.getElementById('anim_test'),
 					anim_result_banner = document.getElementById('anim_result'),
 					anim_test_banner_style = window.getComputedStyle(anim_test_banner)
-					if (anim_test_banner_style.getPropertyValue('opacity') == "0") {
+					if (anim_test_banner_style.getPropertyValue('opacity') != "1") {
 					anim_result_banner.innerHTML = "Animation will run in this browser!";
 					} else {
 					anim_result_banner.innerHTML = "Animation will not run in this browser!";
