--- a/animation_check.html
+++ b/animation_check.html
@@ -46,6 +46,21 @@
 					Recent posts 
 				</div>
 				<script>
+					var first_banner = document.getElementById('firstbanner'),
+					content_header = document.getElementById("content_header"),
+					first_banner_opacity = window.getComputedStyle(first_banner).getPropertyValue('opacity');
+					var i = 0, howManyTimes = 15;
+					function f() {
+						content_header.innerHTML = window.getComputedStyle(document.getElementById('firstbanner')).getPropertyValue('opacity')
+						i++;
+						if( i < howManyTimes ){
+							setTimeout( f, 100 );
+						}
+					}
+					f();
+
+				</script>
+				<!--- <script>
 					var content_header = document.getElementById("content_header"),
 					elm = document.createElement('div');
 					if( elm.style.animationName !== undefined) { //|| elm.style.WebkitAnimationName !== undefined
@@ -53,7 +68,7 @@
 					} else {
 						content_header.innerHTML = "Animation is not supported by this browser!"; 
 					}
-				</script>
+				</script> --->
 			</div>
 		</div>
 	</body>
