--- a/animation_check.html
+++ b/animation_check.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	</head>
 	<body>
-		<div id="anim_test"></div>
+		<div id="anim_test">Hello</div>
 		<div id="anim_result" style="height: 20px;"></div>
 		<div id="page">
 			<div id="header">
