Added fade-in animation. Created _ignore_cookie for testing.

--- a/animation_check_ignore_cookie.html
+++ b/animation_check_ignore_cookie.html
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 				<script>
-					if (no_anim_works || anim_played) { 
+					if (no_anim_works) { 
 						//skip animation entirely for positively outdated browsers
 						//also skip if played in the past 24h
 						var first_banner = document.getElementById('firstbanner');
