More -webkit- bugfixes

--- a/animation_check_ignore_cookie.html
+++ b/animation_check_ignore_cookie.html
@@ -34,10 +34,12 @@
 							var no_anim_works = true;
 						}
 					</script>
-					<div id="firstbanner">
-						<div id="bigfirstbannertext">Personal Site </div> 
-						<div id="smallfirstbannertext">of</div> 
-						<div id="bigfirstbannertext">Krzysztof Hochlewicz</div> 
+					<div id="firstbannerwrapper">
+						<div id="firstbanner">
+							<div id="bigfirstbannertext">Personal Site </div> 
+							<div id="smallfirstbannertext">of</div> 
+							<div id="bigfirstbannertext">Krzysztof Hochlewicz</div> 
+						</div>
 					</div>
 					<div id="secondbanner">
 						<div id="secondbannertext">khoch.io</div> 
